Removed bold effect on hover from pagination to avoid the need to specify a width as that doesn't fit page numbers of different lengths. Made other tiny tweaks.

--- a/webapp/byceps/blueprints/core/static/style/style.css
+++ b/webapp/byceps/blueprints/core/static/style/style.css
@@ -340,8 +340,8 @@ table.wide {
 /* pagination */
 
 nav.pagination {
-  font-size: 0.9rem;
-  margin: 0.5em 0;
+  font-size: 0.8rem;
+  margin: 1em 0;
   text-align: left;
 }
 
@@ -359,16 +359,15 @@ nav.pagination li {
 nav.pagination li a,
 nav.pagination li.current {
   display: inline-block;
+  padding: 0 0.4rem;
   text-align: center;
   text-decoration: none;
-  width: 1.5em;
 }
 
 nav.pagination li a:hover,
 nav.pagination li.current {
   background-color: #dddddd;
   border-radius: 3px;
-  font-weight: bold;
 }
 
 
